add new navbar look with events plugin links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu1"
             aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./Squiggle.html">Squiggle</a></li>
+            <li>
+              <a class="dropdown-item" href="Squiggle.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Squiggle/Squiggle_Logo.png" alt="Squiggle" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Squiggle
+                    <span class="dropdown-item-subtext">Android Mobile Game</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -40,8 +50,28 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
             aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">Google Play:
-                Saved Games</a></li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png" alt="Google Play Saved Games" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Google Play: Saved Games
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/events/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Events/GooglePlay_Events_Plugin_Logo.png" alt="Google Play Events" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Google Play: Events
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
@@ -52,7 +82,7 @@
   </nav>
 
   <div style="position: fixed; z-index: -50;">
-    <div class="row justify-content-between" style="margin-top: -50px; margin-right: -5vw; margin-left: -5vw" >
+    <div class="row justify-content-between" style="margin-top: -50px; margin-right: -5vw; margin-left: -5vw">
       <div class="col overflow-visible">
         <div class="background fade-top">
           <img src="images/Squiggle/EasyLevel.png" class="img-fluid" alt="...">
@@ -93,7 +123,7 @@
               <h5 style="margin-bottom: 0;">Mobile Game</h5>
             </div>
             <img src="images/Squiggle/MainMenu.png" class="card-img-top" alt="...">
-            <div class="card-body"  style="background-color: #e9ecef;">
+            <div class="card-body" style="background-color: #e9ecef;">
               <h5 class="card-title">Squiggle</h5>
               <p class="card-text">
                 A free procedurally generated endless runner with high scores, achievements and quests.
@@ -109,10 +139,11 @@
               <h5 style="margin-bottom: 0;">Unreal Engine Plugin</h5>
             </div>
             <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="card-img-top" alt="...">
-            <div class="card-body"  style="background-color: #e9ecef;">
+            <div class="card-body" style="background-color: #e9ecef;">
               <h5 class="card-title">Google Play Services: Saved Games</h5>
               <p class="card-text">
-                Pack of blueprint nodes exposing Google Play's cloud-saving service to Android Game Developers using Unreal Engine.
+                Pack of blueprint nodes exposing Google Play's cloud-saving service to Android Game Developers using
+                Unreal Engine.
               </p>
             </div>
           </div>
