--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,17 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu1"
             aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./Squiggle.html">Squiggle</a></li>
+            <li>
+              <a class="dropdown-item" href="Squiggle.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Squiggle/Squiggle_Logo.png" alt="Squiggle" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Squiggle
+                    <span class="dropdown-item-subtext">Android Mobile Game</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -40,8 +50,28 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
             aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">Google Play:
-                Saved Games</a></li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png" alt="Google Play Saved Games" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Google Play: Saved Games
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Events/GooglePlay_Events_Plugin_Logo.png" alt="Google Play Events" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Google Play: Events
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
