--- a/plugins/google-play-services/events/overview.html
+++ b/plugins/google-play-services/events/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Saved Games</title>
+    <title>UE Plugin | Events</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -53,7 +53,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -65,7 +65,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../events/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -84,9 +84,10 @@
             </ul>
         </div>
     </nav>
-    <!-- Side Navigation Bar -->
+
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
+            <!-- Side Navigation Bar -->
             <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -94,7 +95,7 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="overview.html">
+                            <a class="nav-link active" href="overview.html">
                                 Overview
                             </a>
                         </li>
@@ -104,33 +105,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="saving_game.html">
-                                Saving a Game
+                            <a class="nav-link inactive" href="incrementing_event.html">
+                                Incrementing an Event
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="loading_game.html">
-                                Loading a Game
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="deleting_game.html">
-                                Deleting a Game
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="external-ui.html">
-                                External Selection UI
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_games.html">
-                                Fetch Games
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="conflict_resolution.html">
-                                Conflict Resolution
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Fetching Events
                             </a>
                         </li>
                         <hr />
@@ -138,23 +119,8 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="snapshot_metadata.html">
-                                Snapshot Metadata
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="snapshot.html">
-                                Snapshot
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="resolution_policy.html">
-                                Resolution Policy
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="snapshot_error.html">
-                                Snapshot Error
+                            <a class="nav-link inactive" href="event.html">
+                                Event
                             </a>
                         </li>
                         <hr />
@@ -167,89 +133,75 @@
                             </a>
                         </li>
                     </ul>
+                    <div style="margin-bottom: 100px">
+                    </div>
                 </div>
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Snapshot Error</h1>
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
+                        <p class="content">
+                            <b>The Google Play Service: Events</b>
+                        </p>
+                        <p class="content">
+                            The Saved Games service is a feature provided by Google Play Services that allows developers
+                            to save and manage game snapshots in the cloud.
+                            With this service, developers can save the game state at any point in time, enabling their
+                            players to continue playing from that exact point in the future from any compatible device.
+                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The Snapshot Error enumeration is a list of possible error's that can occur during actions
-                            taken with all the blueprint nodes.
+                            The Saved Games service provides a reliable and scalable solution for game developers to
+                            implement snapshot functionality in their games.
+                            It also supports cross-platform snapshotting, allowing games to save and resume their game
+                            progress across multiple devices.
+                            In addition to saving game state, the service provides features such as snapshot management,
+                            where developers can enable players to view and manage all of their saved games.
+                            Snapshots can also be deleted and modified at any time, providing developers with full
+                            control over their players saved game data, with the possibility of exposing this
+                            functionality to the players themselves.
                         </p>
                     </div>
-                </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <table class="table table-striped table-bordered table-documentation"
-                            style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th>Resolution Policy</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>SELECT_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        Failure when attempting to show Google's external selection UI.</br>
-                                        Can occur when using the <a href="external-ui.html">External Selection UI</a>.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>OPEN_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        The contents of the snapshot were not found on the server.</br>
-                                        Can occur at all points when attempting to operate on a single Snapshot.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>COMMIT_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        The snapshot failed to be committed to the server (both offline and
-                                        online).</br>
-                                        Can occur when <a href="saving_game.html">Saving a Game</a>.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>READ_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        The binary contents of the snapshot are corrupt.</br>
-                                        Can occur at all points when attempting to extract the binary data of a
-                                        Snapshot.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>DELETE_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        Failure when deleting a Snapshot.</br>
-                                        Can occur when <a href="deleting_game.html">Deleting a Game</a>.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>LOAD_SNAPSHOT_FAILED</td>
-                                    <td>
-                                        Failure fetchinig all Snapshot metadata.</br>
-                                        Can occur when <a href="fetch_games.html">Fetching Games</a>.
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>RESOLVE_CONFLICT_FAILED</td>
-                                    <td>
-                                        The conflict resolution strategy failed to execute.</br>
-                                        Can occur when <a href="saving_game.html">Saving a Game</a> and <a
-                                            href="loading_game.html">Loading a Game</a>.
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="info" style="margin-top: 20px">
+                        <p class="content">
+                            <b>The Unreal Engine Plugin</b>
+                        </p>
+                        <p class="content">
+                            This Unreal Engine plugin for the Snapshots Saved Game service is designed to expose the
+                            service's features to blueprints, making it easier for game developers to integrate the
+                            service into their games.
+                            With the plugin, developers can easily create, save, load game snapshots, and also retrieve
+                            information about snapshots and save states.
+                            The plugin provides a user-friendly interface within the Unreal Engine editor, allowing
+                            developers to connect to the service easily.
+                            By integrating the Snapshots Saved Game Service into their games using this plugin,
+                            developers can offer players a seamless and easy-to-use save and load system that is
+                            reliable and secure.
+                        </p>
+                        <p class="content">
+                            The plugin makes use of <span style="font-weight: 500">no additional libraries or
+                                imports</span>, but instead makes use of the built in google play services SDK already
+                            within Unreal Engine, meaning the size of your <span style="font-weight: 500">game bundle
+                                will hardly increase in size</span>.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The plugin does not interfere with any of Unreal Engine's existing functionality, meaning
+                            <span style="font-weight: 500">no compilation conflicts</span> with other Unreal Engine
+                            provided libraries can occur and <span style="font-weight: 500">all existing Google Play
+                                Services provided by Unreal Engine will work as expected</span>.
+                        </p>
                     </div>
-                </div>
-                <div style="margin-bottom: 400px">
+                    <!-- <div class="info" style="margin-top: 20px"> -->
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_AllNodes.png" style="width: 95%">
+                    </div>
+                    <!-- </div> -->
+                    <div style="margin-bottom: 50px">
+                    </div>
                 </div>
             </main>
         </div>
