update getting started pages

--- a/plugins/google-play-services/events/getting_started.html
+++ b/plugins/google-play-services/events/getting_started.html
@@ -159,34 +159,33 @@
                                 Go to the Library tab and find the plugin and add it to the engine.
                             </p>
                             <li class="list-group-item">
-                                Enable Google Play Saved Games Plugin
+                                Enable Google Play Events Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In Unreal Engine, the plugin will be available in the plugins section.</br>
                                 Go to <span style="font-weight: 500">Settings</span> -> <span
                                     style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Google Play: Saved Games</span>" and ensure it is enabled.
+                                    style="font-weight: 500">Google Play Events</span>" and ensure it is enabled.
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Enabled.png">
+                                    <img src="../../../images/Events/Events_Plugin_Enabled.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
-                                Add Snapshot Support
+                                Enable Google Play Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Enable Google Play Support and Snapshot Support on Google Play Login.</br>
+                                Enable "Google Play Support" and ensure your "Games App ID" is set appropriately for your app.</br>
                                 Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> ->
                                 <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span
                                     style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and
                                 enable: "<span style="font-weight: 500; white-space: nowrap;">Enable Google Play
-                                    Support</span>" and "<span style="font-weight: 500; white-space: nowrap;">Enable
-                                    Snapshots on Google Play login</span>".
+                                    Support</span>".
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Config.png">
+                                    <img src="../../../images/Events/Events_Plugin_Config.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
@@ -199,7 +198,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_GoogleLogin.png">
+                                    <img src="../../../images/UE_Blueprint_GoogleLogin.png">
                                 </div>
                             </div>
                         </ol>
