--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -208,7 +208,7 @@
                                 Add Snapshot Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Enable Google Play Support and Snapshot Support on Google Play Login.</br>
+                                Enable "Google Play Support", "Snapshot Support on Google Play Login" and ensure your "Games App ID" is set appropriately for your app.</br>
                                 Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> ->
                                 <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span
                                     style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and
@@ -231,7 +231,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_GoogleLogin.png">
+                                    <img src="../../../images/UE_Blueprint_GoogleLogin.png">
                                 </div>
                             </div>
                         </ol>
