--- a/Squiggle.html
+++ b/Squiggle.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body>
+<body class="game-body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="index.html">
       <img src="./images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
