--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body class="body-background-generic">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="index.html">
       <img src="./images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
