add updated name titles and add download on google play button to Squiggle homepage card

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom">
               <div class="card-header card-header-custom">
-                <h5 style="margin-bottom: 0;">Google Play Saved Games</h5>
+                <h5 style="margin-bottom: 0;">Play Services: Saved Games</h5>
               </div>
-              <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="card-img-top" alt="...">
+              <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
                   Pack of Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to Android Game
@@ -135,9 +135,9 @@
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom">
               <div class="card-header card-header-custom">
-                <h5 style="margin-bottom: 0;">Google Play Events</h5>
+                <h5 style="margin-bottom: 0;">Play Services: Events</h5>
               </div>
-              <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="card-img-top" alt="...">
+              <img src="images/Events/GooglePlay_Events_Feature.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
                   Pack of Unreal Engine blueprint nodes exposing Google Play's event analytics service to Android Game
@@ -163,11 +163,14 @@
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Squiggle</h5>
               </div>
-              <img src="images/Squiggle/MainMenu.png" class="card-img-top" alt="...">
+              <img src="images/Squiggle/MainMenu.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
                   A free procedurally generated endless runner with high scores, achievements and quests.
                 </p>
+                <a href='https://play.google.com/store/apps/details?id=com.JoshKarpul.Squiggle&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="btn btn-custom">
+                  <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
+                </a>
               </div>
             </div>
           </a>
