--- a/plugins/google-play-services/events/getting_started.html
+++ b/plugins/google-play-services/events/getting_started.html
@@ -159,13 +159,13 @@
                                 Go to the Library tab and find the plugin and add it to the engine.
                             </p>
                             <li class="list-group-item">
-                                Enable Google Play Events Plugin
+                                Enable Play Services Events Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In Unreal Engine, the plugin will be available in the plugins section.</br>
                                 Go to <span style="font-weight: 500">Settings</span> -> <span
                                     style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Google Play Events</span>" and ensure it is enabled.
+                                    style="font-weight: 500">Play Services Events</span>" and ensure it is enabled.
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
